--- a/Web-and-Interface/static/style.css
+++ b/Web-and-Interface/static/style.css
@@ -7,27 +7,29 @@
 
 /* * HTML elements */
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     font-weight: normal;
-    line-height: 1.5em;
+    line-height: 1.3em;
     width: 800px;
     margin: auto;
+    background:#0073B7;
+    font-family: 'Crimson Text', serif;
+    color: #FFFFFF;
 }
 
 
 /* * Local selectors */
 #container {
     margin: 0px auto;
-    margin-top: 40px;
+    margin-top: 30px;
     width: 100%;
-    height: 450px;
-    border: 10px #333 solid;
-    background-color: black;
+    height: 400px;
+    border: 1px #333 solid;
+    background-color: #FFFFFF;
 }
 
 #container #videoElement {
-    width: auto;
+    width: 100%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -36,5 +38,10 @@ body {
 }
 
 #control {
-    margin-top: 40px;
+    margin-top: 30px;
 }
+
+.center{
+    text-align: center;
+}
+
