--- a/Android- Part3/SIH2020/app/src/main/res/layout/activity_main.xml
+++ b/Android- Part3/SIH2020/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/locate_Layout_ID"
+            android:onClick="showCurrentLocation">
 
 
             <RelativeLayout
